fixed font colors when dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,9 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
     background: #242629;
+    color: white;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
-
