--- a/styles/global.css
+++ b/styles/global.css
@@ -20,9 +20,6 @@ body {
 main {
   width: 100%;
   max-height: 80vh;
-  background: red;
-  background-color: red;
-  
 }
 
 a {
